Closed Bug 1161443 Opened 9 years ago Closed 9 years ago

SharedDecoderManager::mWaitForInternalDrain not protected by a monitor

Categories

(Core :: Audio/Video, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla40
Tracking Status
firefox40 --- fixed

People

(Reporter: jya, Assigned: jya)

References

Details

Attachments

(1 file, 1 obsolete file)

SharedDecoderManager::mWaitForInternalDrain is read / written from different thread, always outside the monitor supposedly there for it.
Depends on: 1161416
Make sure we always read/write mWaitForInternalDrain while holding the monitor.
Attachment #8601343 - Flags: review?(gsquelart)
Assignee: nobody → jyavenard
Status: NEW → ASSIGNED
Make sure we don't hold the monitor during Drain() as some platform decoder will call draincomplere immediately
Attachment #8601427 - Flags: review?(gsquelart)
Attachment #8601343 - Attachment is obsolete: true
Attachment #8601343 - Flags: review?(gsquelart)
Attachment #8601427 - Flags: review?(gsquelart) → review+
https://hg.mozilla.org/mozilla-central/rev/380b0a052ef0
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
Depends on: 1166107
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: