Bug 1161443: Always read SDM::mWaitForInternalDrain while holding monitor. r=gerald